--- a/max2.html
+++ b/max2.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="ja">
 <head>
-  <title>転送</title>
+  <title>転送2</title>
   <meta http-equiv="refresh" content="0;url=https://tinnguruma.github.io/max/max3">
 </head>
 <body>
