--- a/max4.html
+++ b/max4.html
@@ -2,8 +2,8 @@
 <html>
 <html lang="ja">
 <head>
-  <title>転送</title>
-  <meta http-equiv="refresh" content="0;url=https://tinnguruma.github.io/max/max5">
+  <title>転送4</title>
+  <meta http-equiv="refresh" content="0.1;url=https://tinnguruma.github.io/max/max5">
 </head>
 <body>
   <br>
