--- a/max5.html
+++ b/max5.html
@@ -2,8 +2,8 @@
 <html>
 <html lang="ja">
 <head>
-  <title>転送</title>
-  <meta http-equiv="refresh" content="0;url=https://tinnguruma.github.io/max/max1">
+  <title>転送5</title>
+  <meta http-equiv="refresh" content="0.1;url=https://tinnguruma.github.io/max/max1">
 </head>
 <body>
   <br>
